--- a/index.html
+++ b/index.html
@@ -2,41 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Registration</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Home</title>
     </head>
 
     <body>
-      <div class="register-box">
-        <h2>Register</h2>
-            <form>
-                <div class="user-register-box">
-                <div>
-                    <input type="text" id="uname" placeholder="Username" required>
-                </div>
-
-                <br>
-
-                <div>
-                    <input type="email" id="email" placeholder="Email" required>
-                </div>
-
-                <br>
-
-                <div> 
-                    <input type="Password" id="password" placeholder="Password" required>
-                </div>
-                </div>
-
-                <br>
-
-                <div id="submit-button">
-                    <input type="submit" value="Submit">
-                </div>
-            </form>
-        </div>
-
-        <script src="main.js"></script>
+        <h1>Welcome</h1>
     </body>
 
 </html>
